--- a/articles/aks/index.yml
+++ b/articles/aks/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: laurenhughes
   ms.author: lahugh
   ms.date: 07/21/2020
-  ms.openlocfilehash: 98d96c36e8ec801c2a8a5a87d0075f2d9b57bd98
-  ms.sourcegitcommit: bdd5c76457b0f0504f4f679a316b959dcfabf1ef
+  ms.openlocfilehash: 9ce4a4e20f6d33880be5dbefe49c2d1d9e6e8c5d
+  ms.sourcegitcommit: f796e1b7b46eb9a9b5c104348a673ad41422ea97
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/22/2020
-  ms.locfileid: "90984952"
+  ms.lasthandoff: 09/30/2020
+  ms.locfileid: "91568388"
 landingContent:
 - title: Azure Kubernetes Service (AKS) について
   linkLists:
@@ -26,8 +26,6 @@ landingContent:
     links:
     - text: AKS に対する Kubernetes の中心概念
       url: concepts-clusters-workloads.md
-    - text: AKS クラスターのベースライン アーキテクチャ
-      url: /azure/architecture/reference-architectures/containers/aks/secure-baseline-aks/
     - text: クラスターとワークロード
       url: concepts-clusters-workloads.md
     - text: アクセスと ID
@@ -76,6 +74,18 @@ landingContent:
       url: tutorial-kubernetes-app-update.md
     - text: 7. AKS で Kubernetes をアップグレードする
       url: tutorial-kubernetes-upgrade-cluster.md
+- title: アーキテクチャのガイダンス
+  linkLists:
+  - linkListType: architecture
+    links:
+    - text: AKS クラスターのベースライン アーキテクチャ
+      url: /azure/architecture/reference-architectures/containers/aks/secure-baseline-aks/
+    - text: AKS ソリューション
+      url: /azure/architecture/reference-architectures/containers/aks-start-here
+    - text: クラスターのオペレーターと開発者向けのベスト プラクティス
+      url: best-practices.md
+    - text: ベスト プラクティスの確認
+      url: kube-advisor-tool.md
 - title: Microsoft Learn でスキルを身に付ける
   linkLists:
   - linkListType: learn
