--- a/articles/iot-pnp/TOC.yml
+++ b/articles/iot-pnp/TOC.yml
@@ -4,11 +4,13 @@
   items:
     - name: IoT プラグ アンド プレイとは
       href: overview-iot-plug-and-play.md
-    - name: プレビュー更新版の更新内容
-      href: overview-iot-plug-and-play-preview-updates.md
+    - name: 現在のリリースの内容
+      href: overview-iot-plug-and-play-current-release.md
 - name: クイックスタート
   expanded: true
   items:
+    - name: 環境を設定する
+      href: set-up-environment.md
     - name: デバイスを IoT Hub に接続する
       items:
         - name: C
@@ -27,6 +29,10 @@
           href: quickstart-service-node.md
         - name: Python
           href: quickstart-service-python.md
+        - name: C#
+          href: quickstart-service-csharp.md
+        - name: Java
+          href: quickstart-service-java.md
 - name: チュートリアル
   items:
     - name: 複数のコンポーネント デバイスに接続する (C)
@@ -41,18 +47,38 @@
       href: tutorial-multiple-components-python.md
     - name: MQTT を使用してデバイスを接続する
       href: tutorial-use-mqtt.md
+    - name: MXChip デバイスとの対話 (サンプル)
+      href: 'https://docs.microsoft.com/samples/azure-samples/mxchip-iot-devkit-pnp-get-started/sample/'
+    - name: デバイスをモジュールに移行する
+      href: tutorial-migrate-device-to-module.md
 - name: 概念
   items:
     - name: アーキテクチャ
       href: concepts-architecture.md
-    - name: 開発者ガイド
-      href: concepts-developer-guide.md
+    - name: デバイス開発者ガイド
+      items:
+        - name: C#
+          href: concepts-developer-guide-device-csharp.md
+        - name: Node.js
+          href: concepts-developer-guide-device-node.md
+        - name: Java
+          href: concepts-developer-guide-device-java.md
+        - name: Python
+          href: concepts-developer-guide-device-python.md
+        - name: C
+          href: concepts-developer-guide-device-c.md
+    - name: サービス開発者ガイド
+      href: concepts-developer-guide-service.md
     - name: コンポーネント
       href: concepts-components.md
     - name: IoT プラグ アンド プレイの規則
       href: concepts-convention.md
+    - name: IoT プラグ アンド プレイ ブリッジ
+      href: concepts-iot-pnp-bridge.md
     - name: Digital Twins
       href: concepts-digital-twin.md
+    - name: デバイス認定
+      href: concepts-certification-program.md
     - name: モデル リポジトリ
       href: concepts-model-repository.md
     - name: ソリューションでのモデルの使用
@@ -67,8 +93,14 @@
   items:
     - name: IoT エクスプローラーをインストールして使用する
       href: howto-use-iot-explorer.md
+    - name: IoT プラグ アンド プレイ ブリッジをインストールして使用する
+      href: howto-use-iot-pnp-bridge.md
     - name: Azure IoT CLI 拡張機能をインストールして使用する
       href: howto-use-iot-pnp-cli.md
+    - name: DTDL 作成ツールをインストールして使用する
+      href: howto-use-dtdl-authoring-tools.md
+    - name: 埋め込み C を使用する
+      href: howto-use-embedded-c.md
     - name: デジタル ツインを管理する
       href: howto-manage-digital-twin.md
     - name: デバイスを認定する
@@ -78,7 +110,7 @@
     - name: ライブラリと SDK
       href: libraries-sdks.md
     - name: Digital Twin REST API
-      href: 'https://aka.ms/iot-pnp-preview-rest'
+      href: 'https://docs.microsoft.com/rest/api/iothub/service/digitaltwin'
     - name: Azure CLI
       href: /cli/azure/azure-cli-reference-for-IoT
 - name: リソース
