--- a/articles/traffic-manager/toc.yml
+++ b/articles/traffic-manager/toc.yml
@@ -44,6 +44,10 @@
       items:
         - name: Traffic Manager で使用される国/地域の階層
           href: traffic-manager-geographic-regions.md
+    - name: セキュリティ
+      items:
+        - name: セキュリティ ベースライン
+          href: security-baseline.md
     - name: 入れ子になった Traffic Manager プロファイル
       href: traffic-manager-nested-profiles.md
     - name: エンドポイントの種類
