--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -43,6 +43,8 @@
           href: cache-java-spring-boot-initializer-with-redis-cache.md
     - name: ランキングの作成
       href: cache-web-app-cache-aside-leaderboard.md
+    - name: 機械学習モデルのデプロイ
+      href: cache-ml.md
     - name: Azure PowerShell を使用して管理する
       href: cache-how-to-manage-redis-cache-powershell.md
     - name: Azure CLI で管理する
