--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -4,22 +4,36 @@
   items:
     - name: Azure VMware Solution について
       href: introduction.md
+- name: クイック スタート
+  items:
+    - name: デプロイ前のプロセス
+      href: production-ready-deployment-steps.md
+    - name: デプロイ前のチェック リスト
+      href: pre-deployment-checklist.md
+    - name: 1 - Azure VMware Solution のデプロイ
+      href: deploy-azure-vmware-solution.md
+    - name: 2 - オンプレミスに接続する
+      href: azure-vmware-solution-on-premises.md
+    - name: 3 - VMware HCX をデプロイして構成する
+      href: tutorial-deploy-vmware-hcx.md
 - name: チュートリアル
   items:
-    - name: 1 - ネットワークの計画
+    - name: 1 - ネットワーク計画のチェックリスト
       href: tutorial-network-checklist.md
-    - name: 2 - プライベート クラウドの作成
+    - name: 2 - プライベート クラウドを作成する
       href: tutorial-create-private-cloud.md
-    - name: 3 - ネットワークの構成
-      href: tutorial-configure-networking.md
-    - name: 4 - プライベート クラウドへのアクセス
+    - name: 3 - プライベート クラウドへのアクセス
       href: tutorial-access-private-cloud.md
-    - name: 5 - プライベート クラウドのスケーリング
-      href: tutorial-scale-private-cloud.md
-    - name: 6 - NSX-T ネットワーク セグメントの作成
+    - name: 4 - ネットワークを構成する
+      href: tutorial-configure-networking.md
+    - name: 5 - NSX-T ネットワーク セグメントの作成
       href: tutorial-nsx-t-network-segment.md
-    - name: 7 - オンプレミスからプライベート クラウドへのピアリング
+    - name: 6 - オンプレミスからプライベート クラウドへのピアリング
       href: tutorial-expressroute-global-reach-private-cloud.md
+    - name: 7 - VMware HCX をデプロイして構成する
+      href: tutorial-deploy-vmware-hcx.md
+    - name: 8 - プライベート クラウドをスケーリングする
+      href: tutorial-scale-private-cloud.md
 - name: 概念
   items:
     - name: プライベート クラウドとクラスター
@@ -31,11 +45,9 @@
     - name: プライベート クラウドのアクセスと ID
       href: concepts-identity.md
     - name: ロールベースのアクセス制御
-      href: concepts-rbac.md
+      href: concepts-role-based-access-control.md
     - name: プライベート クラウドのアップグレード
       href: concepts-upgrades.md
-    - name: プライベート クラウドのモニターと修復
-      href: concepts-monitor-repair-private-cloud.md
 - name: 操作方法ガイド
   items:
     - name: Azure VMware Solution を有効にする
@@ -44,46 +56,34 @@
       href: reserved-instance.md
     - name: 移行評価
       href: ../migrate/how-to-create-azure-vmware-solution-assessment.md?context=/azure/migrate/context/migrate-context.json
-    - name: HCX の設定
-      href: hybrid-cloud-extension-installation.md
     - name: DHCP の管理
       href: manage-dhcp.md
-    - name: 障害復旧
-      href: disaster-recovery.md
-    - name: コンテンツ ライブラリを介した VM のデプロイ
-      href: deploy-vm-content-library.md
+    - name: VM のディザスター リカバリーをデプロイする
+      href: disaster-recovery-for-virtual-machines.md
+    - name: コンテンツ ライブラリを介して VM をデプロイする
+      href: tutorial-deploy-vm-content-library.md
     - name: Azure のネイティブ統合
       items:
         - name: API Management
           href: concepts-api-management.md
         - name: ハブ アンド スポーク
-          href: concepts-avs-hub-and-spoke-integration.md
+          href: concepts-hub-and-spoke.md
         - name: Azure Backup Server
           items:
             - name: Backup Server の設定
-              href: set-up-mabs-for-avs.md
+              href: set-up-backup-server-for-azure-vmware-solution.md
             - name: Backup Server を使用したプライベート クラウドのバックアップ
-              href: backup-avs-vms-with-mabs.md
+              href: backup-azure-vmware-solution-virtual-machines.md
         - name: VM のライフサイクル管理
           href: lifecycle-management-of-azure-vmware-solution-vms.md
         - name: Application Gateway
-          href: protect-avs-web-apps-with-app-gateway.md
+          href: protect-azure-vmware-solution-with-application-gateway.md
         - name: Traffic Manager
-          href: deploy-traffic-manager-to-balance-avs-workloads.md
-        - name: NetApp Files
-          href: net-app-files.md
-    - name: GitHub Enterprise Server
-      href: github-enterprise-server.md
+          href: deploy-traffic-manager-balance-workloads.md
     - name: VMware ソリューション
       items:
         - name: vRealize Operations の設定
-          href: vrealize-operations-for-avs.md
-    - name: VMware のエコシステム
-      items:
-        - name: VM のバックアップ ソリューション
-          href: ecosystem-back-up-vms.md
-- name: リファレンス
-  items: null
+          href: vrealize-operations-for-azure-vmware-solution.md
 - name: リソース
   items:
     - name: トラブルシューティング
