--- a/articles/backup/index.yml
+++ b/articles/backup/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: dcurwin
   ms.author: dacurwin
   ms.date: 12/01/2019
-  ms.openlocfilehash: eeca42ea748c10970f312a84ea32c53fb904344a
-  ms.sourcegitcommit: bdd5c76457b0f0504f4f679a316b959dcfabf1ef
+  ms.openlocfilehash: 4716d537a6a3e402a4f399be8d64c9fd51edc292
+  ms.sourcegitcommit: 4bebbf664e69361f13cfe83020b2e87ed4dc8fa2
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/22/2020
-  ms.locfileid: "90974445"
+  ms.lasthandoff: 10/01/2020
+  ms.locfileid: "91620122"
 landingContent:
 - title: Azure Backup について
   linkLists:
@@ -60,6 +60,12 @@ landingContent:
       url: backup-center-overview.md
     - text: Azure Database for PostgreSQL のバックアップ
       url: backup-azure-database-postgresql.md
+    - text: Azure VM の選択的なディスク バックアップと復元
+      url: selective-disk-backup-restore.md
+    - text: Azure VM 上の SQL Server データベースのリージョン間の復元
+      url: restore-sql-database-azure-vm.md#cross-region-restore
+    - text: 最大 32 のディスクを使用した VM のバックアップのサポート
+      url: backup-support-matrix-iaas.md#vm-storage-support
     - text: Azure Backup の論理的な削除
       url: backup-azure-security-feature-cloud.md
     - text: Azure VM 上の SQL Server のファイルとして復元
