--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -69,6 +69,8 @@
       href: load-balancer-tcp-reset.md
     - name: Standard Load Balancer と可用性ゾーン
       href: load-balancer-standard-availability-zones.md
+    - name: フローティング IP 構成
+      href: load-balancer-floating-ip.md
     - name: セキュリティ
       items:
         - name: セキュリティ ベースライン
