--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -39,6 +39,7 @@
         - name: Azure Defender for App Service
           href: defender-for-app-service-introduction.md
         - name: Azure Defender for Storage
+          displayName: 'blob, adls, files'
           href: defender-for-storage-introduction.md
         - name: Azure Defender for SQL
           displayName: database
@@ -46,7 +47,7 @@
         - name: Azure Defender for IoT
           href: defender-for-iot-introduction.md
         - name: Azure Defender for Key Vault
-          displayName: KV
+          displayName: 'KV, akv'
           href: defender-for-key-vault-introduction.md
         - name: Azure Defender for Kubernetes
           displayName: 'clusters, k8s'
@@ -65,13 +66,13 @@
   items:
     - name: はじめに
       href: security-center-get-started.md
-    - name: Azure 以外のマシンを接続する
-      displayName: 'azure stack, windows, linux'
-      href: quickstart-onboard-machines.md
-    - name: AWS と GCP アカウントを接続する
+    - name: ハイブリッド環境を設定する
       items:
+        - name: Azure 以外のマシンを接続する
+          displayName: 'azure stack, ash, windows, linux, hybrid, arc'
+          href: quickstart-onboard-machines.md
         - name: AWS アカウントを接続する
-          displayName: 'hybrid, multicloud, amazon'
+          displayName: 'hybrid, multicloud, amazon, arc'
           href: quickstart-onboard-aws.md
         - name: GCP アカウントを接続する
           displayName: 'hybrid, multicloud, google'
@@ -90,7 +91,7 @@
       href: security-center-planning-and-operations-guide.md
     - name: リソースの保護
       href: tutorial-protect-resources.md
-    - name: インシデントへの対応
+    - name: セキュリティ アラートの調査と対応
       href: tutorial-security-incident.md
     - name: 規制に対するコンプライアンスの向上
       href: security-center-compliance-dashboard.md
@@ -206,6 +207,7 @@
       items:
         - name: Azure VM 上の Azure Defender for SQL を構成する
           href: defender-for-sql-usage.md
+          displayName: 'hybrid, arc'
         - name: 情報の保護ポリシーをカスタマイズする
           href: security-center-info-protection-policy.md
     - name: コンテナー レジストリ用 Azure Defender を使用する
@@ -218,6 +220,7 @@
         - name: アラート抑制ルールの作成および管理
           href: alerts-suppression-rules.md
         - name: Azure Defender の Key Vault アラートに対応する
+          displayName: 'akv, kv'
           href: defender-for-key-vault-usage.md
         - name: セキュリティ インシデントを管理する
           href: security-center-incident.md
