--- a/articles/postgresql/flexible-server/index.yml
+++ b/articles/postgresql/flexible-server/index.yml
@@ -4,17 +4,17 @@ summary: Azure Database for PostgreSQL - フレキシブル サーバー (プレ
 metadata:
   title: Azure Database for PostgreSQL - フレキシブル サーバー (プレビュー)
   description: Azure Database for PostgreSQL - フレキシブル サーバー (プレビュー) は、PostgreSQL Community Edition を基盤として開発者向けに構築されている、Microsoft クラウドのリレーショナル データベース サービスです。
-  author: rachel-msft
-  ms.author: raagyema
+  author: sunilagarwal
+  ms.author: sunila
   ms.date: 09/22/2020
   ms.service: postgresql
   ms.topic: landing-page
-  ms.openlocfilehash: 7c214662a37083708b0a38148382e16b553145c4
-  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
+  ms.openlocfilehash: 215a34c7adcd9f5628bb164deecaf94d2b885b1d
+  ms.sourcegitcommit: 19dce034650c654b656f44aab44de0c7a8bd7efe
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 09/22/2020
-  ms.locfileid: "90929072"
+  ms.lasthandoff: 10/04/2020
+  ms.locfileid: "91710670"
 landingContent:
 - title: フレキシブル サーバー (プレビュー) について
   linkLists:
